# MANT_HPCA25

./: .gitignore  LICENSE  README.md  accel_model_configs_example.py  pyproject.toml  run_evaluation.py
mant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mant/models/: llama_mant.py  opt_mant.py
mant/quantize/: qmodule_ant.py  qmodule_mant.py  qmodule_olive.py  quant_func.py  quant_grid.py  quantizer.py
mant/utils/: calib_data.py  dataload_utils.py  model_utils.py
output/precision_search/: 20260512_165454_result_summary.md  20260512_175445_result_summary.md
output/precision_search/20260511_225043/ant/: ant_0001.json  ant_0002.json  ant_0003.json  ant_0004.json  ant_0005.json  ant_0006.json
output/precision_search/20260511_232303/mant/: mant_0000.json  mant_0001.json
output/precision_search/20260511_232732/ant/: ant_0000.json
output/precision_search/20260511_232850/mant/: mant_0001.json
output/precision_search/20260512_103049/mant/: mant_0000.json  mant_0001.json  mant_0002.json  mant_0003.json
output/precision_search/20260512_114723/olive/: olive_0000.json  olive_0001.json  olive_0002.json  olive_0003.json  olive_0004.json  olive_0005.json  olive_0006.json  olive_0007.json  olive_0008.json  olive_0009.json  (+1 more)
output/precision_search/20260512_165454/: final_ant.json  summary.json
output/precision_search/20260512_175445/: summary.json
scripts/: full_run_precision_search_llama3.sh  llama2_run.sh  llama_run.sh  opt_run.sh  run_precision_search_llama3.sh  search_precision_config.py
search_result/: ant-64  ant.md  mant.md  olive.md
(+4 files in other folders)
